Added pull assets support by python

--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,5 @@ Plugins/**/Intermediate/*
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine,visualstudiocode,jetbrains+all
+
+Content/Assets/
